<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_station"
    tools:context=".StationActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/main_layout_id"
        android:orientation="vertical">
        <LinearLayout
            android:paddingTop="10px"
            android:paddingBottom="10px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/station_instr"
                android:textSize="@dimen/font_size"
                android:id="@+id/station_instr" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/album_image" />
        </LinearLayout>

        <LinearLayout
            android:paddingTop="10px"
            android:paddingBottom="10px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/debug_textview" />
        </LinearLayout>

        <LinearLayout
            android:paddingTop="10px"
            android:paddingBottom="10px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_gravity="center_horizontal"
                android:paddingTop="10px"
                android:paddingBottom="5px"
                android:layout_height="5px"
                android:layout_width="fill_parent"
                android:background="@color/black"
                android:src="@android:drawable/divider_horizontal_bright" />
        </LinearLayout>

        <LinearLayout
            android:paddingTop="10px"
            android:paddingBottom="10px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="createStation"
                android:text="@string/create_station" />
        </LinearLayout>
        
        <LinearLayout
            android:paddingTop="10px"
            android:paddingBottom="10px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="searchStation"
                android:text="@string/search_station" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="deleteStation"
                android:text="@string/delete_station" />
        </LinearLayout>

        <LinearLayout
            android:paddingTop="10px"
            android:paddingBottom="10px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="selectStation"
                android:text="@string/select_station" />
        </LinearLayout>



        <LinearLayout
            android:paddingTop="10px"
            android:paddingBottom="10px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_gravity="center_horizontal"
                android:paddingTop="10px"
                android:paddingBottom="5px"
                android:layout_height="5px"
                android:layout_width="fill_parent"
                android:background="@color/black"
                android:src="@android:drawable/divider_horizontal_bright" />
        </LinearLayout>

        <LinearLayout
            android:paddingTop="10px"
            android:paddingBottom="10px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_button_pause"
                android:id="@+id/player_button_play_pause"
                android:onClick="pauseSong" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_button_like"
                android:id="@+id/player_button_like"
                android:onClick="likeSong" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_button_next"
                android:id="@+id/player_button_next"
                android:onClick="skipSong" />
        </LinearLayout>

        <LinearLayout
            android:paddingTop="10px"
            android:paddingBottom="10px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_gravity="center_horizontal"
                android:paddingTop="10px"
                android:paddingBottom="5px"
                android:layout_height="5px"
                android:layout_width="fill_parent"
                android:background="@color/black"
                android:src="@android:drawable/divider_horizontal_bright" />
        </LinearLayout>

        <LinearLayout
            android:paddingTop="10px"
            android:paddingBottom="10px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="userLogout"
                android:text="@string/logout_submit" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
