<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/create_layout_id"
        android:orientation="vertical">

        <TextView
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:textSize="@dimen/font_size"
            android:text="@string/create_station_title"
            />

        <LinearLayout
            android:paddingTop="10px"
            android:paddingBottom="10px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/create_station_instr"
                android:id="@+id/create_station_name" />
        </LinearLayout>

        <LinearLayout
            android:paddingTop="10px"
            android:paddingBottom="10px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_gravity="center_horizontal"
                android:paddingTop="10px"
                android:paddingBottom="5px"
                android:layout_height="5px"
                android:layout_width="fill_parent"
                android:background="@color/black"
                android:src="@android:drawable/divider_horizontal_bright" />
        </LinearLayout>

        <LinearLayout
            android:paddingTop="10px"
            android:paddingBottom="10px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/create_station_song_instr"
                android:id="@+id/create_edittext_song" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_button_song"
                android:id="@+id/create_button_song"
                android:onClick="submitSong" />
        </LinearLayout>

        <LinearLayout
            android:paddingTop="10px"
            android:paddingBottom="10px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_gravity="center_horizontal"
                android:paddingTop="10px"
                android:paddingBottom="5px"
                android:layout_height="5px"
                android:layout_width="fill_parent"
                android:background="@color/black"
                android:src="@android:drawable/divider_horizontal_bright" />
        </LinearLayout>

        <LinearLayout
            android:paddingTop="10px"
            android:paddingBottom="10px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/create_station_artist_instr"
                android:id="@+id/create_edittext_artist" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_button_artist"
                android:id="@+id/create_button_artist"
                android:onClick="submitArtist" />
        </LinearLayout>

        <LinearLayout
            android:paddingTop="10px"
            android:paddingBottom="10px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_gravity="center_horizontal"
                android:paddingTop="10px"
                android:paddingBottom="5px"
                android:layout_height="5px"
                android:layout_width="fill_parent"
                android:background="@color/black"
                android:src="@android:drawable/divider_horizontal_bright" />
        </LinearLayout>

        <LinearLayout
            android:paddingTop="10px"
            android:paddingBottom="10px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/debug_create_textview" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
