<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/main_layout_id"
        android:orientation="vertical">

        <LinearLayout
            android:paddingTop="10px"
            android:paddingBottom="10px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:text="@string/login_intro_title"
                android:textSize="@dimen/title_size"
                android:id="@+id/intro_title" />
        </LinearLayout>

        <LinearLayout
            android:paddingTop="10px"
            android:paddingBottom="10px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:text="@string/login_instr"
                android:textSize="@dimen/font_size"
                android:id="@+id/intro_instructions" />
        </LinearLayout>

        <LinearLayout
            android:paddingTop="10px"
            android:paddingBottom="10px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="userLogin"
                android:text="@string/login_submit" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
